# envy

./: .clang-format  .gitignore  README.md
Envy/: CMakeLists.txt  Disconnect.h  Door.cpp  Door.h  Email.cpp  Email.h  FileBase.cpp  FileBase.h  FullScreenEditor.cpp  FullScreenEditor.h  GetVersion.cmake  Logger.cpp  Logger.h  MessageBase.cpp  MessageBase.h  Node.cpp  Node.h  Script.cpp  Script.h  SshClient.cpp  SshClient.h  User.cpp  User.h  Version.h.in  aixlog.hpp  main.cpp
Envy/jamlib-1.4.7/: CMakeLists.txt
Envy/jamlib-1.4.7/include/jamlib/: jam.h
Envy/jamlib-1.4.7/src/: crc32.c  lastread.c  mbase.c  message.c  structrw.c  structrw.h  subpack.c
ExampleData/: envy.ini
ExampleData/data/: filebases.toml  msgbases.toml  protocols.toml  seclevels.toml
Servo/: CMakeLists.txt  EventMgr.cpp  EventMgr.h  IPBlockItem.cpp  IPBlockItem.h  Servo.aps  Servo.cpp  Servo.rc  Servo.vcxproj  resource.h
Utils/: filetrim.pl  massupload.pl  ticproc.pl  uploadproc.pl
gfiles/: automsg.ans  doors.ans  doorstats.ans  editorbd.ans  emailnew.ans  emailold.ans  goodbye.ans  ibol.ans  ilc-header.ans  last10.ans  mainmenu.ans  oneliner.ans  sysinfo.ans  system.ans  userlist.ans  welcome.ans  xfermenu.ans
scripts/: automsg.js  doors.js  doorstats.js  ibol.js  ilc-send.js  ilc.js  last10-display.js  last10.js  menu.js  nodeuse.js  oneliner.js  sysinfo.js  sysopeditor.js  test.js  usereditor.js  userlist.js  xfer.js
