cmake_minimum_required (VERSION 3.0)
project (servo)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_MODULE_PATH ${servo_SOURCE_DIR}/../cmake/)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")

add_executable(servo Servo.cpp IPBlockItem.cpp EventMgr.cpp)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    target_link_libraries (servo util pthread)
else()
    if (CMAKE_SYSTEM_NAME MATCHES "Haiku")
    	target_link_libraries (servo pthread network)
    elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
		target_link_libraries (servo util pthread)   
    else()
    	target_link_libraries (servo util pthread stdc++fs)
    endif()
endif()
